# pipeline_data_python

./: .gitignore  databases.sql  docker-compose-databases.yaml  main.py  pyproject.toml
data/: csv_documents.csv
models/: models.py
