[tool.poetry]
name = "pipelines_data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
motor = {extras = ["all"], version = "^3.3.1"}
httpx = "^0.25.0"
numpy = {version = "^1.26.0", python="^3.10,<3.13"}
pandas = "^2.1.1"
sqlmodel = "^0.0.9"
psycopg2 = "^2.9.9"
asyncpg = "^0.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
